--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@poai/mcpm-aider": "^1.2.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
     "jest": "^29.7.0",
@@ -23,6 +24,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "pnpm": "^10.14.0"
+    "pnpm": "^10.14.0",
+    "openai": "^4.29.2",
+    "dotenv": "^16.4.1"
   }
 }
