--- a/package.json
+++ b/package.json
@@ -6,26 +6,35 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch",
+    "dev": "ts-node src/index.ts",
+    "watch": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@poai/mcpm-aider": "^1.2.0",
+    "@types/express": "^5.0.3",
+    "@types/http-errors": "^2.0.5",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "pnpm": "^10.14.0",
+    "@supabase/supabase-js": "^2.54.0",
+    "dotenv": "^16.4.1",
+    "hono": "^4.0.0",
+    "nodemon": "^3.1.10",
     "openai": "^4.29.2",
-    "dotenv": "^16.4.1"
+    "pnpm": "^10.14.0",
+    "uuid": "^11.1.0"
   }
 }
