--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.54.0",
     "dotenv": "^16.4.1",
-    "hono": "^4.0.0",
+    "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "openai": "^4.29.2",
     "pnpm": "^10.14.0",
